delete code object file. add virt_to_page test.
The mm.rst show address space is related with kaslr.

Signed-off-by: Erdong zhang <erdong2018@163.com>

--- a/linux/virt_to_page/Makefile
+++ b/linux/virt_to_page/Makefile
@@ -1,6 +1,6 @@
-obj-m += importer-dummy.o
+obj-m += mmap.o
 CFLAGS_MODULE += -g
-KBUILD_EXTRA_SYMBOLS += /home/hygon/zhanged/dma_buf/exporter/Module.symvers
+
 all:
 	make -C /lib/modules/$(shell uname -r)/build KBUILD_EXTMOD=$(PWD) modules
 
