add code detail comment
Signed-off-by: Your Name <you@example.com>

--- a/linux/hmm/Makefile
+++ b/linux/hmm/Makefile
@@ -1,7 +1,12 @@
-obj-m += test_hmm.o
+obj-m := test_hmm.o
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+
+#obj-m := gup_test.o
+gup_test:
+	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+
 clean:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
 test:
